feat: move to pnpm

--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
 		"start": "vite",
 		"start:sw": "vite",
 		"typecheck": "tsc --noEmit",
-		"lint": "npm run typecheck && npm run lint:js && npm run lint:css",
+		"lint": "pnpm typecheck && pnpm lint:js && pnpm lint:css",
 		"lint:js": "eslint src --ext .js,.mjs,.ts,.mts --fix --ignore-path .gitignore",
 		"lint:css": "stylelint **/*.css --fix",
 		"lint-staged": "lint-staged",
-		"prebuild:app": "npm run lint",
-		"build:app": "vite build",
-		"prepreview": "npm run build:app",
+		"prebuild": "pnpm lint",
+		"build": "vite build",
+		"prepreview": "pnpm build",
 		"preview": "vite preview --port 3000",
 		"test": "vitest",
 		"test:coverage": "vitest run --coverage"
