chore: update stylelint rules

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -120,7 +120,7 @@
 		"property-case": "lower",
 		"declaration-bang-space-after": "never",
 		"declaration-bang-space-before": "always",
-		"declaration-colon-newline-after": "always-multi-line",
+		"declaration-colon-newline-after": null,
 		"declaration-colon-space-after": "always-single-line",
 		"declaration-colon-space-before": "never",
 		"declaration-empty-line-before": null,
