--- a/.stylelintrc
+++ b/.stylelintrc
@@ -19,7 +19,7 @@
 		"media-feature-name-no-unknown": true,
 		"at-rule-no-unknown": true,
 		"comment-no-empty": true,
-		"no-descending-specificity": true,
+		"no-descending-specificity": null,
 		"no-duplicate-at-import-rules": true,
 		"no-duplicate-selectors": true,
 		"no-empty-source": true,
